# GenLesson

./: .gitignore
trunk/: CMakeLists.txt
trunk/src/: CMakeLists.txt  GenLesson.cpp  LibWrapper.cpp  LibWrapper.h  lesson.cpp  lesson.h  nchord.cpp  nchord.h  note.cpp  note.h  part.cpp  part.h  pitchset.cpp  pitchset.h  voice.cpp  voice.h
